ili2fme 5.2.1 (2010-03-xx)
---------------------------
- bug: EXCEPTION_ACCESS_VIOLATION in FME2010 with dataset fanout 

ili2fme 5.2.0 (2009-12-09)
---------------------------
- added model repository support
- ili2c-4.3.0
- bug interlis2.db: out of sync with metafile; SOURCE_SETTINGS or DESTINATION_SETTINGS should be set to YES
- bug writer: single arcs were stroked
- bug itf-reader: accept tab (not only space) after tag

ili2fme 5.1.0 (2009-03-11)
---------------------------
- changed ATTR_TYPE_MAP of xtf_char from fme_char to fme_varchar as requested by safe
- ili2c-4.1.1
- itf: read/write AREA centroid as 2D even if domain of control points is 3D 

ili2fme 5.0.2 (2008-12-19)
---------------------------
- bug itf-writer: fixed memory leak in SURFACE/AREA converter
- bug itf-writer: write empty non OPTIONAL tables

ili2fme 5.0.1 (2008-11-20)
---------------------------
!!! GML SUPPORT ADHERS TO ISO19136/GML 3.2 AND A DRAFT ILIGML SPEC !!!
- bug: generate schema features of SURFACE helper table with "_itf_ref_$(MainTableName)"
- auto-generate xtf_id in linetable features (if xtf_id is missing)
- writer supports now GEOMETRY_ENCODING=FMEXML
- bug: failed to detect "//// " in itf
- new default Reader.CHECK_UNIQUEOID=No
- bug: superfluous IFMELine in IFMEPath if second segment is an arc

ili2fme 5.0.0 (2008-11-18) (BETA) 
---------------------------
!!! GML SUPPORT ADHERS TO ISO19136/GML 3.2 AND A DRAFT ILIGML SPEC !!!
- read enum values (see parameter CREATEFEATURETYPE4ENUM)
- check uniqueness of TID/OIDs (see param CHECK_UNIQUEOID)
- optional renumber TIDs read from ITF files to make them unique (see param ILI1_RENUMBERTID) 
- selectable encoding for additional geometry attributes (see param GEOMETRY_ENCODING)
- write gml (3.2) according to iligml encoding spec
- if USE_LINETABLES=Yes but no line table features exist, auto-build line tables from main feature (same as if USE_LINETABLES=No) 
- added *.ili to file selector
- added *.gml to file selector
