@@ -1,6 +1,6 @@
-#Wed Dec 09 13:35:10 CET 2009
+#Tue Mar 02 20:18:06 CET 2010
 versionMicro=0
 versionMinor=2
+versionDate=20100302
 versionBranch=
-versionDate=20091209
 versionMajor=5
